--- a/web/kustomization.yaml
+++ b/web/kustomization.yaml
@@ -1,4 +1,7 @@
 resources:
   - deployment-web.yaml
   - service-web.yaml
-
+images:
+  - name: 560971842042.dkr.ecr.ap-northeast-2.amazonaws.com/wocgc-web
+    newName: 560971842042.dkr.ecr.ap-northeast-2.amazonaws.com/wocgc-web
+    newTag: latest
