--- a/.github/workflows/web-argo-eks.yaml
+++ b/.github/workflows/web-argo-eks.yaml
@@ -9,6 +9,7 @@ on:
 env:
   AWS_REGION: ap-northeast-2
   ECR_REGISTRY: 560971842042.dkr.ecr.ap-northeast-2.amazonaws.com
+  ECR_REPOSITORY: wocgc
   WEB_IMAGE: wocgc-web
 
 jobs:
