--- a/app/kustomization.yaml
+++ b/app/kustomization.yaml
@@ -3,6 +3,6 @@ resources:
   - deployment.yaml
   - service.yaml
 images:
-  - name: 560971842042.dkr.ecr.ap-northeast-2.amazonaws.com/wocgc-app     
-    newName: 560971842042.dkr.ecr.ap-northeast-2.amazonaws.com/wocgc-app
-    newTag: latest
+  - name: 560971842042.dkr.ecr.ap-northeast-2.amazonaws.com/wocgc     
+    newName: 560971842042.dkr.ecr.ap-northeast-2.amazonaws.com/wocgc
+    newTag: wocgc-app
