--- a/.github/workflows/web-argo-eks.yaml
+++ b/.github/workflows/web-argo-eks.yaml
@@ -53,6 +53,6 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-          git add app/kustomization.yaml
+          git add web/kustomization.yaml
           git commit -m "ci: update app image tag to $APP_TAG"
           git push origin main
