--- a/apps/app-app.yaml
+++ b/apps/app-app.yaml
@@ -1,16 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: petclinic
+  name: petclinic-app
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/Wocgc/argo-eks.git
-    targetRevision: HEAD
-    path: .
-    kustomize: {}
-      recurse: true
+    targetRevision: main
+    path: app
   destination:
     server: https://kubernetes.default.svc
     namespace: default
