--- a/.github/workflows/web-argo-eks.yaml
+++ b/.github/workflows/web-argo-eks.yaml
@@ -55,6 +55,6 @@ jobs:
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           # push 전에 항상 명시적으로 rebase 하기
           git add web/kustomization.yaml
-          git pull -rebase origin main
+          git pull --rebase origin main
           git commit -m "ci: update app image tag to $APP_TAG"
           git push origin main
