--- a/app/deployment.yaml
+++ b/app/deployment.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: app-cgc
     spec:
+      revisionHistoryLimit: 3
       containers:
         - name: app
           image: 560971842042.dkr.ecr.ap-northeast-2.amazonaws.com/wocgc:wocgc-app
