--- a/ingress/prometheus-ingress.yaml
+++ b/ingress/prometheus-ingress.yaml
@@ -4,26 +4,22 @@ metadata:
   name: prometheus-ingress
   namespace: monitoring
   annotations:
+    kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
-    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:560971842042:certificate/146de44c-1b8c-402f-9a99-29176ca08d38
-    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'
-    alb.ingress.kubernetes.io/ssl-redirect: '443'
     alb.ingress.kubernetes.io/backend-protocol: HTTP
-    alb.ingress.kubernetes.io/group.name: prometheus
-    alb.ingress.kubernetes.io/healthcheck-path: /metrics
-    external-dns.alpha.kubernetes.io/hostname: prometheus.cgclab.shop
+    alb.ingress.kubernetes.io/healthcheck-path: / 
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
 spec:
-  ingressClassName: alb
   rules:
-  - host: prometheus.cgclab.shop
+  - host: prometheus.cgclab.shop  # 너의 도메인에 맞게 변경
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
-            name: prometheus-kube-prometheus-prometheus
+            name: prometheus
             port:
               number: 9090
 
