--- a/monitoring/prometheus-configMap.yaml
+++ b/monitoring/prometheus-configMap.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1
+uapiVersion: v1
 kind: ConfigMap
 metadata:
   name: prometheus-config
@@ -17,7 +17,16 @@ data:
         static_configs:
           - targets: ['grafana.monitoring.svc.cluster.local:3000']
 
+      - job_name: 'node-exporter'
+        static_configs:
+          - targets: ['node-exporter.monitoring.svc.cluster.local:9100']
+
+      - job_name: 'kube-state-metrics'
+        static_configs:
+          - targets: ['kube-state-metrics.monitoring.svc.cluster.local:8080']
+
       - job_name: 'external-alb'
         metrics_path: /metrics
         static_configs:
           - targets: ['prometheus.cgclab.shop']
+
