--- a/apps/monitoring.yaml
+++ b/apps/monitoring.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: petclinic-hpa
+  name: petclinic-monitoring
   namespace: argocd
 spec:
   project: default
