--- a/monitoring/kube-state-metrics.yaml
+++ b/monitoring/kube-state-metrics.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -11,20 +12,20 @@ metadata:
 rules:
 - apiGroups: [""]
   resources:
-  - pods
-  - nodes
-  - namespaces
-  - services
-  - replicationcontrollers
-  - persistentvolumeclaims
-  - persistentvolumes
+    - pods
+    - nodes
+    - namespaces
+    - services
+    - replicationcontrollers
+    - persistentvolumeclaims
+    - persistentvolumes
   verbs: ["get", "list", "watch"]
 - apiGroups: ["apps"]
   resources:
-  - statefulsets
-  - daemonsets
-  - deployments
-  - replicasets
+    - statefulsets
+    - daemonsets
+    - deployments
+    - replicasets
   verbs: ["get", "list", "watch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -58,7 +59,25 @@ spec:
       serviceAccountName: kube-state-metrics
       containers:
       - name: kube-state-metrics
-        image: quay.io/coreos/kube-state-metrics:latest
+        image: registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.10.1
         ports:
         - containerPort: 8080
+          name: http-metrics
+        - containerPort: 8081
+          name: telemetry
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: kube-state-metrics
+  namespace: monitoring
+  labels:
+    app: kube-state-metrics
+spec:
+  ports:
+    - name: http-metrics
+      port: 8080
+      targetPort: http-metrics
+  selector:
+    app: kube-state-metrics
 
