--- a/monitoring/prometheus-configmap.yaml
+++ b/monitoring/prometheus-configmap.yaml
@@ -29,3 +29,15 @@ data:
         metrics_path: /metrics
         static_configs:
           - targets: ['prometheus.cgclab.shop']
+      
+      - job_name: 'argocd'
+        kubernetes_sd_configs:
+          - role: endpoints
+        relabel_configs:
+          - source_labels: [__meta_kubernetes_service_label_app_kubernetes_io_name]
+            action: keep
+            regex: argocd-server
+          - source_labels: [__meta_kubernetes_namespace]
+            action: keep
+            regex: argocd
+
